--- a/day1/package.json
+++ b/day1/package.json
@@ -6,14 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.43",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "i": "^0.3.7",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.15.1"
+    "npm": "^10.9.0",
+    "sequelize": "^6.15.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4"
   }
 }
