--- a/day4/package.json
+++ b/day4/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.3",
     "sequelize": "^6.15.1"
   }
 }
