--- a/day6/package.json
+++ b/day6/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -14,6 +15,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.15.1"
+    "node-cron": "^3.0.3",
+    "sequelize": "^6.15.1",
+    "start": "^5.1.0",
+    "web3": "^4.13.0"
   }
 }
