--- a/day7/package.json
+++ b/day7/package.json
@@ -9,11 +9,15 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.15.1"
+    "sequelize": "^6.15.1",
+    "web3": "^4.13.0",
+    "web3-eth-accounts": "^4.2.1"
   }
 }
