--- a/day15/package.json
+++ b/day15/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
+    "nodemon": "^3.1.7",
     "sequelize": "^6.37.4"
   },
   "name": "day15",
   "version": "1.0.0",
   "description": "## Instructions",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
